fix table content wrapping

--- a/src/app/core/components/sortable-table/sortable-table.component.scss
+++ b/src/app/core/components/sortable-table/sortable-table.component.scss
@@ -11,9 +11,9 @@
   padding: 0;
 }
 
-:host ::ng-deep thead .app-sortable-table__cell--wrap {
+:host ::ng-deep tbody .app-sortable-table__cell--wrap {
   white-space: normal;
-  overflow-wrap: normal;
+  overflow-wrap: anywhere;
   word-break: normal;
 }
 
